[#1130] using staff endpoint to get details of user while creating company adding v2 endpoint for getCompanyByExternalID and searchOrgs
